--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'libs', include: 'jsoup-1.8.1.jar')
     compile 'com.android.support:appcompat-v7:21.0.2'
 }
